data/css/style.css
.anchor {
	visibility: hidden;
	padding-top: 20px;
	margin-top: -20px;
}

body {
	padding-bottom: 30px;
}

@media (max-width: 767px) {
	.navbar-static-top {
		margin-left: 0;
		margin-right: 0;
	}
}

@media (min-width: 980px) {
	body {
		padding-top: 60px;
	}

	.anchor {
		visibility: hidden;
		padding-top: 60px;
		margin-top: -60px;
	}

}

code, pre {
	font-family: "Dejavu sans mono", Monaco, monospace;
}

.content {
	width: 100%;
	background: #fff;
}

.content .numbers > pre, .content .highlight > pre {
	background-color: transparent;
	border: 0;
	border-radius: 0;
	margin: 0;
	padding: 0;
	font-size: 12px;
	line-height: 1.4;
	white-space: pre;
	word-break: normal;
	word-wrap: normal;
}
.content .numbers {
	background: #ececec;
	border-right: 1px solid #ddd;
	text-align: right;
	padding: 10px 6px;
	vertical-align: top;
}
.content .numbers a {
	color: #aaa;
}
.content .code {
	width: 100%;
	vertical-align: top;
	padding-top: 10px;
}
.content .code > .highlight {
	position: relative;
	padding-left: 10px;
}
.content .code > .highlight > pre {
	position: relative;
	z-index: 2;
}
#highlight_line {
	background: #ffffcc;
	position: absolute;
	left: 0;
	right: 0;
	width: 100%;
	height: 16px;
	z-index: 1;
}
#file-info {
	display: none;
}

/* highlighting theme */
.hll { background-color: #ffffcc }
.c { color: #999988; font-style: italic } /* Comment */
.err { color: #a61717; background-color: #e3d2d2 } /* Error */
.k { color: #000000; font-weight: bold } /* Keyword */
.o { color: #000000; font-weight: bold } /* Operator */
.cm { color: #999988; font-style: italic } /* Comment.Multiline */
.cp { color: #999999; font-weight: bold; font-style: italic } /* Comment.Preproc */
.c1 { color: #999988; font-style: italic } /* Comment.Single */
.cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
.gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
.ge { color: #000000; font-style: italic } /* Generic.Emph */
.gr { color: #aa0000 } /* Generic.Error */
.gh { color: #999999 } /* Generic.Heading */
.gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
.go { color: #888888 } /* Generic.Output */
.gp { color: #555555 } /* Generic.Prompt */
.gs { font-weight: bold } /* Generic.Strong */
.gu { color: #aaaaaa } /* Generic.Subheading */
.gt { color: #aa0000 } /* Generic.Traceback */
.kc { color: #000000; font-weight: bold } /* Keyword.Constant */
.kd { color: #000000; font-weight: bold } /* Keyword.Declaration */
.kn { color: #000000; font-weight: bold } /* Keyword.Namespace */
.kp { color: #000000; font-weight: bold } /* Keyword.Pseudo */
.kr { color: #000000; font-weight: bold } /* Keyword.Reserved */
.kt { color: #445588; font-weight: bold } /* Keyword.Type */
.m { color: #009999 } /* Literal.Number */
.s { color: #d01040 } /* Literal.String */
.na { color: #008080 } /* Name.Attribute */
.nb { color: #0086B3 } /* Name.Builtin */
.nc { color: #445588; font-weight: bold } /* Name.Class */
.no { color: #008080 } /* Name.Constant */
.nd { color: #3c5d5d; font-weight: bold } /* Name.Decorator */
.ni { color: #800080 } /* Name.Entity */
.ne { color: #990000; font-weight: bold } /* Name.Exception */
.nf { color: #990000; font-weight: bold } /* Name.Function */
.nl { color: #990000; font-weight: bold } /* Name.Label */
.nn { color: #555555 } /* Name.Namespace */
.nt { color: #000080 } /* Name.Tag */
.nv { color: #008080 } /* Name.Variable */
.ow { color: #000000; font-weight: bold } /* Operator.Word */
.w { color: #bbbbbb } /* Text.Whitespace */
.mf { color: #009999 } /* Literal.Number.Float */
.mh { color: #009999 } /* Literal.Number.Hex */
.mi { color: #009999 } /* Literal.Number.Integer */
.mo { color: #009999 } /* Literal.Number.Oct */
.sb { color: #d01040 } /* Literal.String.Backtick */
.sc { color: #d01040 } /* Literal.String.Char */
.sd { color: #d01040 } /* Literal.String.Doc */
.s2 { color: #d01040 } /* Literal.String.Double */
.se { color: #d01040 } /* Literal.String.Escape */
.sh { color: #d01040 } /* Literal.String.Heredoc */
.si { color: #d01040 } /* Literal.String.Interpol */
.sx { color: #d01040 } /* Literal.String.Other */
.sr { color: #009926 } /* Literal.String.Regex */
.s1 { color: #d01040 } /* Literal.String.Single */
.ss { color: #990073 } /* Literal.String.Symbol */
.bp { color: #999999 } /* Name.Builtin.Pseudo */
.vc { color: #008080 } /* Name.Variable.Class */
.vg { color: #008080 } /* Name.Variable.Global */
.vi { color: #008080 } /* Name.Variable.Instance */
.il { color: #009999 } /* Literal.Number.Integer.Long */

/* based on https://bitbucket.org/kevinburke/markdowncss/overview */
.markdownrender {
	padding: 0 12px;
}
.markdownrender h1, .markdownrender h2, .markdownrender h3, .markdownrender h4 {
	color: #111111;
	font-weight: 400;
}
.markdownrender h1, .markdownrender h2, .markdownrender h3, .markdownrender h4, .markdownrender p {
	margin-bottom: 24px;
	padding: 0;
}
.markdownrender h1 {
	font-size: 2.5em;
}
.markdownrender h2 {
	font-size: 2em;
	margin: 24px 0 6px;
}
.markdownrender h3 {
	font-size: 1.7em;
}
.markdownrender h4 {
	font-size: 1.5em;
}
.markdownrender h5 {
	font-size: 1.3em;
}
.markdownrender li {
	line-height: 1.5em;
}
.markdownrender li ul, .markdownrender li ul {
	margin-left: 24px;
}
.markdownrender p, .markdownrender ul, .markdownrender ol {
	font-size: 0.9em;
	line-height: 1.5em;
	max-width: 740px;
}
.markdownrender pre {
	padding: 0px 24px;
	max-width: 800px;
	white-space: pre-wrap;
}
.markdownrender code {
	font-family: Consolas, Monaco, Andale Mono, monospace;
	line-height: 1.2em;
	font-size: 0.85em;
}
.markdownrender aside {
	display: block;
	float: right;
	width: 390px;
}
.markdownrender blockquote {
	border-left: 0.5em solid #d6d6d6;
	padding: 0 1em;
	margin-left:0;
	max-width: 676px;
	background: #f6f6f6;
}
.markdownrender blockquote cite {
	font-size:0.85em;
	line-height:1.3em;
	color:#bfbfbf;
}
.markdownrender blockquote p {
	color: #666;
	max-width: 660px;
}
.markdownrender hr {
	width: 740px;
	text-align: left;
	margin: 0 auto 0 0;
	color: #999;
}

